Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-129147

[Windows] Crash on QRhiD3D::output6ForWindow() with nullptr access

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.8.1, 6.9.0 FF
    • 6.7.2
    • Qt RHI
    • None
    • Windows 10.0.22631
    • Windows
    • d36dde374 (dev), 84cd29808 (6.8), 70dffc34f (6.7)

    Description

      Have no idea what preconditions are, just found it in our automated tracking system

      Call stack:

      >	Qt6Gui.dll!QRhiD3D::output6ForWindow(QWindow * w, IDXGIAdapter1 * adapter, IDXGIOutput6 * * result) Line 22	C++
       	Qt6Gui.dll!QRhiD3D::outputDesc1ForWindow(QWindow * w, IDXGIAdapter1 * adapter, DXGI_OUTPUT_DESC1 * result) Line 43	C++
       	Qt6Gui.dll!QD3D11SwapChain::createOrResize() Line 5120	C++
       	Qt6Quick.dll!QSGRenderThread::syncAndRender() Line 651	C++
       	Qt6Quick.dll!QSGRenderThread::run() Line 978	C++
       	Qt6Core.dll!QThreadPrivate::start(void * arg) Line 290	C++
       	[External Code]
      
      **output** was nullptr.
      

      Attachments

        For Gerrit Dashboard: QTBUG-129147
        # Subject Branch Project Status CR V

        Activity

          People

            lagocs Laszlo Agocs
            studiosus Vladimir Belyavsky
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes