rhi: d3d: Gracefully handle EnumOutputs failures

Fixes: QTBUG-129147
Pick-to: 6.8 6.7 6.5
Change-Id: Idec2678135ae4622537bece35c4253d933655b10
Reviewed-by: Andy Nichols <andy.nichols@qt.io>